--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "cinepick-movie-selector",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ROB1-alt.github.io/cinepick-movie-selector",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "eslint-plugin-react": "^7.22.0",
+    "gh-pages": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
@@ -17,6 +19,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
